Prevent the user to save the file in the applychangeswidget, it should be changed programatically (when ok is clicked).

BUG: 203428